--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LifeCycleActivity</string>
+    <string name="demonstration">Demostration life cycle activity</string>
 </resources>
